--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
    
 </head>
 <body>
+       <div>
+    <h1 class="homepageheader"><b>STARTSEITE</b></h1>
+    </div>
+    <hr>
     <div class="container">
         <a href="germanrecipes.html" class="btn-img">
             <img src="images/germanflag.png" alt="German Recipes">
@@ -28,6 +32,27 @@
      <p>Hallo, hier ich habe Deutsche, Ostereichen, und Schweize Rezipe, to view the different recipes please click on the country flag in accordance to what type of recipes you want to see.</p>
     </div>
     <div class="line-break"><br></div>
+   <a href="chickendoner.html" class="recipe-btn">
+        <img src="images/chicken-doner-kebab-recipe-9.jpg" alt="Food Image">
+        <div class="recipe-description">
+            <h3>Hähnchen-Döner Kebab</h3>
+            <p>This is a brief description of the food recipe. It can contain information about the ingredients, cooking process, and more.</p>
+        </div>
+    </a>
+    <a href="Blutwurst.html" class="recipe-btn">
+        <img src="images/Blutwurst-blood-sausage.jpg.webp" alt="Food Image">
+        <div class="recipe-description">
+            <h3>Blutwurst</h3>
+            <p>This is a brief description of the food recipe. It can contain information about the ingredients, cooking process, and more.</p>
+        </div>
+    </a>
+    <a href="Sauerbraten.html" class="recipe-btn">
+        <img src="images/sauerbraten.jpg" alt="Food Image">
+        <div class="recipe-description">
+            <h3>Sauerbraten</h3>
+            <p>This is a brief description of the food recipe. It can contain information about the ingredients, cooking process, and more.</p>
+        </div>
+    </a>
     <footer>
         <div class="footerContainer">
             <div class="socialIcons">
@@ -38,10 +63,10 @@
                 
             </div>
             <div class="footerNav">
-                <ul><li><a href="index.html">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="mailto: mowhit28@yahoo.com">Contact Me</a></li>
-                    <li><a href="">My School</a></li>
+                <ul><li><a href="index.html">Startseite</a></li>
+                    <li><a href="">Über</a></li>
+                    <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
+                    <li><a href="">Meine Schule</a></li>
                 </ul>
             </div>
             
