--- a/germanrecipes.html
+++ b/germanrecipes.html
@@ -2,17 +2,28 @@
 <html>
     <head>
         <title>Deutsche, Ostereichen, Die Schweizen Kuche</title>
-        <link rel="icon" type="image/jpg" href="images/favicon.jpg">
+       
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
-        <a href="https://en.wikipedia.org/wiki/Germany" target=_blank>
-<img src="/images/germanflag.png" height="150px" alt="german flag" id="ger"></a>
-<a href="https://en.wikipedia.org/wiki/Austria" target=_blank>
-<img src="/images/austrianflag.png"height="150px" alt="austrian flag" id="aus"></a>
-<a href="https://en.wikipedia.org/wiki/Switzerland" target=_blank>
-<img src="/images/swissflag.png"  height="150px" alt="swiss flag" id="sws" >
-    </a>
+        <div>
+            <h1 class="homepageheader"><b>DEUTSCHE REZIPE</b></h1>
+            </div>
+            <hr>
+        <div class="container">
+            <a href="germanrecipes.html" class="btn-img">
+                <img src="images/germanflag.png" alt="German Recipes">
+                <div class="description">Explore German Recipes</div>
+            </a>
+            <a href="austrianrecipes.html" class="btn-img">
+                <img src="images/austrianflag.png" alt="Austrian Recipes">
+                <div class="description">Discover Austrian Recipes</div>
+            </a>
+            <a href="swissrecipes.html" class="btn-img">
+                <img src="images/swissflag.png" alt="Swiss Recipes">
+                <div class="description">Check out Swiss Recipes</div>
+            </a>
+        </div>
 </header>
     <body>
 
