--- a/germanrecipes.html
+++ b/germanrecipes.html
@@ -7,7 +7,7 @@
     </head>
     <header>
         <div>
-            <h1 class="homepageheader"><b>DEUTSCHE REZIPE</b></h1>
+            <h1 class="homepageheader"><b>DEUTSCHE REZEPTE</b></h1>
             </div>
             <hr>
         <div class="container">
