--- a/germanrecipes.html
+++ b/germanrecipes.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Deutsche, Ostereichen, Die Schweizen Kuche</title>
+        <title>German Day 2024</title>
        
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
         <div>
-            <h1 class="homepageheader"><b>DEUTSCHE REZEPTE</b></h1>
+            <h1 class="homepageheader"><b>DEUTSCHE ESSEN</b></h1>
             </div>
             <hr>
         <div class="container">
