--- a/austrianrecipes.html
+++ b/austrianrecipes.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Deutsche, Ostereichen, Die Schweizen Kuche</title>
+        <title>German Day 2024</title>
        
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
         <div>
-            <h1 class="homepageheader"><b>ÖSTERREICHISCHE REZEPTE</b></h1>
+            <h1 class="homepageheader"><b>ÖSTERREICHISCHES ESSEN</b></h1>
             </div>
             <hr>
         <div class="container">
             <a href="germanrecipes.html" class="btn-img">
                 <img src="images/germanflag.png" alt="German Recipes">
-                <div class="description">Explore German Recipes</div>
+                <div class="description">Deutsche Lebensmittel erforschen</div>
             </a>
             <a href="austrianrecipes.html" class="btn-img">
                 <img src="images/austrianflag.png" alt="Austrian Recipes">
-                <div class="description">Discover Austrian Recipes</div>
+                <div class="description">Österreichische Lebensmittel erforschen</div>
             </a>
             <a href="swissrecipes.html" class="btn-img">
                 <img src="images/swissflag.png" alt="Swiss Recipes">
-                <div class="description">Check out Swiss Recipes</div>
+                <div class="description">Entdecke Schweizer Lebensmittel</div>
             </a>
         </div>
 </header>
