--- a/swissrecipes.html
+++ b/swissrecipes.html
@@ -7,21 +7,21 @@
     </head>
     <header>
         <div>
-            <h1 class="homepageheader"><b>SCHWEIZER REZEPTE</b></h1>
+            <h1 class="homepageheader"><b>SCHWEIZER ESSEN</b></h1>
             </div>
             <hr>
         <div class="container">
             <a href="germanrecipes.html" class="btn-img">
                 <img src="images/germanflag.png" alt="German Recipes">
-                <div class="description">Explore German Recipes</div>
+                <div class="description">Deutsche Lebensmittel erforschen</div>
             </a>
             <a href="austrianrecipes.html" class="btn-img">
                 <img src="images/austrianflag.png" alt="Austrian Recipes">
-                <div class="description">Discover Austrian Recipes</div>
+                <div class="description">Österreichische Lebensmittel erforschen</div>
             </a>
             <a href="swissrecipes.html" class="btn-img">
                 <img src="images/swissflag.png" alt="Swiss Recipes">
-                <div class="description">Check out Swiss Recipes</div>
+                <div class="description">Entdecke Schweizer Lebensmittel</div>
             </a>
         </div>
 </header>
