--- a/austrianrecipes.html
+++ b/austrianrecipes.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html>
     <head>
         <title>German Day 2024</title>
-       
+       <link rel="icon" type="image/jpg" href="images/favicon.jpg">
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
@@ -13,15 +13,15 @@
         <div class="container">
             <a href="germanrecipes.html" class="btn-img">
                 <img src="images/germanflag.png" alt="German Recipes">
-                <div class="description">Deutsche Lebensmittel erforschen</div>
+                <div class="description">Deutsche Gerichte entdecken</div>
             </a>
             <a href="austrianrecipes.html" class="btn-img">
                 <img src="images/austrianflag.png" alt="Austrian Recipes">
-                <div class="description">Österreichische Lebensmittel erforschen</div>
+                <div class="description">Österreichische Gerichte entdecken</div>
             </a>
             <a href="swissrecipes.html" class="btn-img">
                 <img src="images/swissflag.png" alt="Swiss Recipes">
-                <div class="description">Entdecke Schweizer Lebensmittel</div>
+                <div class="description">Entdecke Schweizer Gerichte</div>
             </a>
         </div>
 </header>
