--- a/germanrecipes.html
+++ b/germanrecipes.html
@@ -2,26 +2,26 @@
 <html>
     <head>
         <title>German Day 2024</title>
-       
+       <link rel="icon" type="image/jpg" href="images/favicon.jpg">
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
         <div>
-            <h1 class="homepageheader"><b>DEUTSCHE ESSEN</b></h1>
+            <h1 class="homepageheader"><b>DEUTSCHES ESSEN</b></h1>
             </div>
             <hr>
         <div class="container">
             <a href="germanrecipes.html" class="btn-img">
                 <img src="images/germanflag.png" alt="German Recipes">
-                <div class="description">Explore German Recipes</div>
+                <div class="description">Deutsche Gerichte entdecken</div>
             </a>
             <a href="austrianrecipes.html" class="btn-img">
                 <img src="images/austrianflag.png" alt="Austrian Recipes">
-                <div class="description">Discover Austrian Recipes</div>
+                <div class="description">Österreichische Gerichte entdecken</div>
             </a>
             <a href="swissrecipes.html" class="btn-img">
                 <img src="images/swissflag.png" alt="Swiss Recipes">
-                <div class="description">Check out Swiss Recipes</div>
+                <div class="description">Entdecke Schweizer Gerichte</div>
             </a>
         </div>
 </header>
