--- a/chickendoner.html
+++ b/chickendoner.html
@@ -23,33 +23,34 @@
 </header>
     <body>
         <h1>Hähnchen-Döner von Suzy Karadshesh (Das mediterrane Gericht)-</h1>
+        <h3>Inhaltsstoffe</h3>
         <ul class="donering">
-            <li>3 to 4 pounds boneless skinless chicken thighs, 10 to 12 chicken</li>
-            <li>Kosher salt and black pepper</li>
-            <li>½ cup whole milk yogurt</li>
-            <li>6 to 7 tablespoons tomato paste, (a small 6-ounce can)</li>
-            <li>Zest and juice of 2 lemons</li>
-            <li>8 garlic cloves, (minced)</li>
-            <li>2 ½ teaspoons baharat spice blend</li>
-            <li>2 teaspoons cumin</li>
-            <li>1 teaspoons aleppo pepper</li>
-            <li>1 teaspoon smoked paprika</li>
-            <li>Tahini sauce</li>
+            <li>3 bis 4 Pfund entbeinte Hähnchenschenkel ohne Haut, 10 bis 12 Hähnchen</li>
+            <li>Koscheres Salz und schwarzer Pfeffer</li>
+            <li>½ Tasse Vollmilchjoghurt</li>
+            <li>6 bis 7 Esslöffel Tomatenmark (eine kleine 6-Unzen-Dose)</li>
+            <li>Schale und Saft von 2 Zitronen</li>
+            <li>8 Knoblauchzehen, (gehackt)</li>
+            <li>2 ½ Teelöffel Baharat-Gewürzmischung</li>
+            <li>2 Teelöffel Kreuzkümmel</li>
+            <li>1 Teelöffel Aleppo-Pfeffer</li>
+            <li>1 Teelöffel geräucherter Paprika</li>
+            <li>Tahini-Soße</li>
             <li>Hummus</li>
-            <li>Yogurt sauce</li>
-            <li>Pita bread</li>
-            <li>2 tomatoes, (halved and sliced)</li>
-            <li>1 onion, (halved and sliced)</li>
-            <li>1 english cucumber, (halved and sliced)</li>
-            <li>Rice</li>
-            <li>Salad</li>
+            <li>Joghurtsauce</li>
+            <li>Pita Brot</li>
+            <li>2 Tomaten, (halbiert und in Scheiben geschnitten)</li>
+            <li>1 Zwiebel, (halbiert und in Scheiben geschnitten)</li>
+            <li>1 Englische Gurke, (halbiert und in Scheiben geschnitten)</li>
+            <li>Reis</li>
+            <li>Salat</li>
         </ul> <p class="instructions"><h3>Schritt 1</h3>Bereite die Marinade zu:
                         Füge die folgenden Zutaten in eine große Schale ein: Joghurt,Tomatenpaste,Zitronenschale,Zitronensaft, Knoblauch und Gewürze.
                         Gut durchmischen damit sich alle Zutaten zusammensetzen.
             <h3>Schritt 2</h3> Würzen des Hühnchens .Klopf es trocken und würz es mit Salz und Pfeffer auf jeder Seite.
             <h3>Schritt 3</h3>Marinieren: Mariniere das Hühnchen und reibe es so lange mit der Marinade ein bis es vollständig mit Marinade bedeckt ist.Wenn du Zeit hast empfehle ich dir das Hühnchen für circa 3 Stunden im Kühlschrank lassen.
             <h3>Schritt 4</h3>Das Hähnchen aufspießen: Teilen Sie die Hähnchenschenkel in zwei Stapel auf. Stecken Sie jeweils 2 bis 3 Metallspieße auf den ersten Stapel Hähnchenschenkel und drücken Sie sie eng aneinander.  Wiederholen Sie den Vorgang mit einem weiteren Satz von 2 bis 3 Spießen, um den zweiten Hähnchenstapel aufzuspießen.
-            <h3>Schritt 5</h3>To cook on the grill: Heat the grill to 400 degrees F (for my grill, this would be medium-high heat). Arrange the kebabs on grates and close the grill. Cook for about 10 to 15 minutes on one side until nicely charred, then turn over and cook for another 10 to 15 minutes or until the chicken is cooked through and no longer pink in the middle (a total of 20 to 30 minutes, depending on the size of the chicken thighs).
+            <h3>Schritt 5</h3>Auf dem Grill zubereiten: Den Grill auf 400 Grad F erhitzen (bei meinem Grill wäre das mittelhohe Hitze). Die Spieße auf die Roste legen und den Grill schließen. Etwa 10 bis 15 Minuten auf einer Seite garen, bis sie schön verkohlt sind, dann umdrehen und weitere 10 bis 15 Minuten garen, bis das Hähnchen durchgebraten und in der Mitte nicht mehr rosa ist.
             <h3>Schritt 6</h3>Rest:Nehmen Sie das Huhn vom Grill und lassen Sie es 5 bis 10 Minuten ruhen.
             <h3>Schritt 7</h3>Das Huhn von den Spießen abschneiden oder rasieren: Halten Sie die Spieße in einem leichten Winkel aufrecht. Mit einem scharfen Messer das Fleisch von oben nach unten in dünne Scheiben schneiden. or however you’re able to do it safely.
             <h3>Schritt 8</h3>In Pitawraps oder auf Tellern servieren.</p>
