--- a/chickendoner.html
+++ b/chickendoner.html
@@ -9,15 +9,15 @@
         <div class="container">
             <a href="germanrecipes.html" class="btn-img">
                 <img src="images/germanflag.png" alt="German Recipes">
-                <div class="description">Explore German Recipes</div>
+                <div class="description">Deutsche Gerichte entdecken</div>
             </a>
             <a href="austrianrecipes.html" class="btn-img">
                 <img src="images/austrianflag.png" alt="Austrian Recipes">
-                <div class="description">Discover Austrian Recipes</div>
+                <div class="description">Österreichische Gerichte entdecken</div>
             </a>
             <a href="swissrecipes.html" class="btn-img">
                 <img src="images/swissflag.png" alt="Swiss Recipes">
-                <div class="description">Check out Swiss Recipes</div>
+                <div class="description">Entdecke Schweizer Gerichte</div>
             </a>
         </div>
 </header>
