--- a/chickendoner.html
+++ b/chickendoner.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>German Day 2024</title>
-       
+        <link rel="icon" type="image/jpg" href="images/favicon.jpg">
         <link rel="stylesheet" href="style.css">
     </head>
     <header>
