--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             </div>
             <div class="footerNav">
                 <ul><li><a href="index.html">Startseite</a></li>
-                    <li><a href="">Über</a></li>
+                    <li><a href="about.html">Über</a></li>
                     <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
-                    <li><a href="">Meine Schule</a></li>
+                    <li><a href="myschool.html">Meine Schule</a></li>
                 </ul>
             </div>
             
