--- a/about.html
+++ b/about.html
@@ -22,5 +22,36 @@
         </div>
 </header>
   <body><h1>Über mich</h2>
-  <p>Ich bin ein Schüler der Edsel Ford High School,und habe im zweiten Jahr Deutschunterricht.  Ich habe HTML und CSS für diese Website gelernt. </p></body>
+  <p>Mein Name ist Miles, ich bin Schüler an der Edsel Ford High School, und ich bin in meinem zweiten Jahr der deutschen Sprache. Ich habe HTML und CSS für diese Website gelernt. Ich hoffe wirklich, dass man das zu schätzen weiß, denn eine Website von Grund auf zu erstellen ist eine sehr schwierige Aufgabe. Danke sehr, dass Sie sich meine Website ansehen! </p>
+   <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+      <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <a href="https://www.facebook.com/miles.whitaker.54" target="_blank">
+                    <img src="images/317727_facebook_social media_social_icon.png"><i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/wh1takerm/" target="_blank"><img src="images/1298747_instagram_brand_logo_social media_icon.png"><i class="fa-brands fa-instagram"></i></a>
+                
+            </div>
+            <div class="footerNav">
+                <ul><li><a href="index.html">Startseite</a></li>
+                    <li><a href="about.html">Über</a></li>
+                    <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
+                    <li><a href="myschool.html">Meine Schule</a></li>
+                </ul>
+            </div>
+            
+        </div>
+        <div class="footerBottom">
+            <p>Copyright &copy;2024; Designed by <span class="designer">Miles Whitaker</span></p>
+        </div>
+    </footer></body>
 </html>
