--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <hr>
     <div class="recipes-container">
-     <p>Hallo, hier ich habe Deutsche, Ostereichen, und Schweize Rezipe, to view the different recipes please click on the country flag in accordance to what type of recipes you want to see.</p>
+     <p>Klicken Sie auf die Fahne des Landes, dessen Lebensmittel Sie sehen möchten</p>
     </div>
     <div class="line-break"><br></div>
    <a href="chickendoner.html" class="recipe-btn">
