--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
         <img src="images/chicken-doner-kebab-recipe-9.jpg" alt="Food Image">
         <div class="recipe-description">
             <h3>Hähnchen-Döner Kebab</h3>
-            <p>This is a brief description of the food recipe. It can contain information about the ingredients, cooking process, and more.</p>
+            <p>Eine Variante eines klassischen deutschen Fastfood-Gerichts.</p>
         </div>
     </a>
     <a href="Blutwurst.html" class="recipe-btn">
         <img src="images/Blutwurst-blood-sausage.jpg.webp" alt="Food Image">
         <div class="recipe-description">
             <h3>Blutwurst</h3>
-            <p>This is a brief description of the food recipe. It can contain information about the ingredients, cooking process, and more.</p>
+            <p>Wurst, die mit Blut gefüllt und mit Füllung verfestigt ist.</p>
         </div>
     </a>
     <a href="Sauerbraten.html" class="recipe-btn">
         <img src="images/sauerbraten.jpg" alt="Food Image">
         <div class="recipe-description">
             <h3>Sauerbraten</h3>
-            <p>This is a brief description of the food recipe. It can contain information about the ingredients, cooking process, and more.</p>
+            <p>Ein einfaches Rezept für einen Braten, der mariniert und mit Bratensoße übergossen wird und oft als deutsches Nationalgericht gilt.</p>
         </div>
     </a>
     <footer>
