--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
      <p>Klicken Sie auf die Fahne des Landes, dessen Lebensmittel Sie sehen möchten</p>
     </div>
     <div class="line-break"><br></div>
+    <h2>DIE KLASSIKER (MIT REZEPTEN)</h2>
    <a href="chickendoner.html" class="recipe-btn">
         <img src="images/chicken-doner-kebab-recipe-9.jpg" alt="Food Image">
         <div class="recipe-description">
