--- a/austrianrecipes.html
+++ b/austrianrecipes.html
@@ -7,7 +7,7 @@
     </head>
     <header>
         <div>
-            <h1 class="homepageheader"><b>DEUTSCHES ESSEN</b></h1>
+            <h1 class="homepageheader"><b>ÖSTERREICHEISCHES ESSEN</b></h1>
             </div>
             <hr>
         <div class="container">
