--- a/austrianrecipes.html
+++ b/austrianrecipes.html
@@ -49,3 +49,30 @@
             <p class="description">Ein geschichtetes Gebäck mit Apfelstücken und Füllung, oft mit Puderzucker und Nüssen bestreut.</p>
             <img class="deutschefood" src="images/apfelstrudel.jpg">
         </div>
+            </body>
+    <footer>
+        <div class="footerContainer">
+            <div class="socialIcons">
+                <a href="https://www.facebook.com/miles.whitaker.54" target="_blank">
+                    <img src="images/317727_facebook_social media_social_icon.png"><i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/wh1takerm/" target="_blank"><img src="images/1298747_instagram_brand_logo_social media_icon.png"><i class="fa-brands fa-instagram"></i></a>
+                
+            </div>
+            <div class="footerNav">
+                <ul><li><a href="index.html">Startseite</a></li>
+                    <li><a href="">Über</a></li>
+                    <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
+                    <li><a href="">Meine Schule</a></li>
+                </ul>
+            </div>
+            
+        </div>
+        <div class="footerBottom">
+            <p>Copyright &copy;2024; Designed by <span class="designer">Miles Whitaker</span></p>
+        </div>
+    </footer>
+  
+
+
+</html>
