--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>Ein einfaches Rezept für einen Braten, der mariniert und mit Bratensoße übergossen wird und oft als deutsches Nationalgericht gilt.</p>
         </div>
     </a>
-    <footer>
+      <footer>
         <div class="footerContainer">
             <div class="socialIcons">
                 <a href="https://www.facebook.com/miles.whitaker.54" target="_blank">
@@ -67,7 +67,7 @@
                 <ul><li><a href="index.html">Startseite</a></li>
                     <li><a href="about.html">Über</a></li>
                     <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
-                    <li><a href="myschool.html">Meine Schule</a></li>
+                    <li><a href="workscited.html">Zitierte Werke</a></li>
                 </ul>
             </div>
             
