--- a/swissrecipes.html
+++ b/swissrecipes.html
@@ -45,7 +45,7 @@
         </div>
     
     </body>
-    <footer>
+      <footer>
         <div class="footerContainer">
             <div class="socialIcons">
                 <a href="https://www.facebook.com/miles.whitaker.54" target="_blank">
@@ -56,9 +56,9 @@
             </div>
             <div class="footerNav">
                 <ul><li><a href="index.html">Startseite</a></li>
-                    <li><a href="">Über</a></li>
+                    <li><a href="about.html">Über</a></li>
                     <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
-                    <li><a href="">Meine Schule</a></li>
+                    <li><a href="workscited.html">Zitierte Werke</a></li>
                 </ul>
             </div>
             
