--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </div>
     </a>
     <a href="Blutwurst.html" class="recipe-btn">
-        <img src="images/Blutwurst-blood-sausage.jpg.webp" alt="Food Image">
+        <img src="images/Currywurst_EXPS_TOHAS21_156083_E04_15_5b_v2" alt="Food Image">
         <div class="recipe-description">
-            <h3>Blutwurst</h3>
-            <p>Wurst, die mit Blut gefüllt und mit Füllung verfestigt ist.</p>
+            <h3>Currywurst</h3>
+            <p>Eine beliebte deutsche Fast-Food-Gericht besteht aus gedämpfter, dann gebratener Schweinswurst, die typischerweise mit Curryketchup gewürzt und mit Pommes serviert wird..</p>
         </div>
     </a>
     <a href="Sauerbraten.html" class="recipe-btn">
