--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <div class="line-break"><br></div>
     <h2>DIE KLASSIKER (MIT REZEPTEN)</h2>
    <a href="chickendoner.html" class="recipe-btn">
-        <img src="images/chicken-doner-kebab-recipe-9.jpg" alt="Food Image">
+        <img src="images/Currywurst_EXPS_TOHAS21_156083_E04_15_5b_v2.jpg" alt="Food Image">
         <div class="recipe-description">
             <h3>Hähnchen-Döner Kebab</h3>
             <p>Eine Variante eines klassischen deutschen Fastfood-Gerichts.</p>
         </div>
     </a>
-    <a href="Blutwurst.html" class="recipe-btn">
+    <a href="Currywurst.html" class="recipe-btn">
         <img src="images/Currywurst_EXPS_TOHAS21_156083_E04_15_5b_v2" alt="Food Image">
         <div class="recipe-description">
             <h3>Currywurst</h3>
