--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </a>
     <a href="Currywurst.html" class="recipe-btn">
-        <img src="images/Currywurst_EXPS_TOHAS21_156083_E04_15_5b_v2" alt="Food Image">
+        <img src="images/Currywurst_EXPS_TOHAS21_156083_E04_15_5b_v2.jpg" alt="Food Image">
         <div class="recipe-description">
             <h3>Currywurst</h3>
             <p>Eine beliebte deutsche Fast-Food-Gericht besteht aus gedämpfter, dann gebratener Schweinswurst, die typischerweise mit Curryketchup gewürzt und mit Pommes serviert wird..</p>
