--- a/germanrecipes.html
+++ b/germanrecipes.html
@@ -29,7 +29,7 @@
         <div class="item">
             <h2>Currywurst:</h2>
             <p class="description">Eine beliebte deutsche Fast-Food-Gericht besteht aus gedämpfter, dann gebratener Schweinswurst, die typischerweise mit Curryketchup gewürzt und mit Pommes serviert wird.</p>
-            <img class="deutschefood" src="images/Currywurst_EXPS_TOHAS21_156083_E04_15_5b_v2.jpg">
+            <img class="deutschefood" src="images/Currywurst.jpg">
         </div>
     
         <div class="item">
