--- a/workscited.html
+++ b/workscited.html
@@ -55,7 +55,7 @@
                 <ul><li><a href="index.html">Startseite</a></li>
                     <li><a href="about.html">Über</a></li>
                     <li><a href="mailto: mowhit28@yahoo.com">Kontakt</a></li>
-                    <li><a href="workscited.html">Zitierte Werke</a></li>
+                    <li><a href="workscited.html">Quellen</a></li>
                 </ul>
             </div>
             
