--- a/workscited.html
+++ b/workscited.html
@@ -21,7 +21,7 @@
             </a>
         </div>
 </header>
-  <body><h1>Zitierte Werke</h1>
+  <body><h1>Quellen</h1>
   <p>Die einzige Arbeit, die ich paraphrasiert und zitiert habe, sind die Bilder und die Teile der Rezepte. Ich hoffe, dass dies den Richtlinien entspricht, und ich möchte mich bei allen Autoren der Rezepte bedanken, die ich verwendet habe: 
     von Suzy Karadsheh von The Mediterranean dish, The Kitchen Maus, und Chris Simpler von Allrecipes.
     Ich habe ihre Rezepte zusammengefasst, und ohne sie hätte ich die Website nicht so gestalten können, wie sie ist.</p>
