--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@
   <body><h1>Über mich</h2>
   <p>Mein Name ist Miles, ich bin Schüler an der Edsel Ford High School, und ich bin in meinem zweiten Jahr der deutschen Sprache. Ich habe HTML und CSS für diese Website gelernt. Ich hoffe wirklich, dass man das zu schätzen weiß, denn eine Website von Grund auf zu erstellen ist eine sehr schwierige Aufgabe. Danke sehr, dass Sie sich meine Website ansehen! </p>
    <br>
+      <p>Ein großes Dankeschön an meinen Freund Anton aus Deutschland, der mir beim erstellen der Texte geholfen hat.</p>
+      <br>
          <br>
          <br>
          <br>
