--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
        <div>
-    <h1 class="homepageheader"><b>STARTSEITE</b></h1>
+    <h1 class="homepageheader"><b>DEUTSCHE LEBENSMITTEL</b></h1>
     </div>
     <hr>
     <div class="container">
